# cosmology

./: .gitignore  README.md  pyproject.toml  setup.cfg
cosmology/: __init__.py  _lcdm.py  _numerical.py  _structure.py  astropy.py  background.py  camb.py
cosmology/test/: test_background.py
cosmology/tests/: test_lcdm.py
docs/: background.rst  conf.py  index.rst  structure.rst
docs/_ext/: cosmology_default_methods.py
