[metadata]
name = cosmology
version = attr: cosmology.__version__
author = Nicolas Tessore
author_email = n.tessore@ucl.ac.uk
license = MIT
license_file = LICENSE
url = https://cosmology.readthedocs.io
description = cosmology package for Python
long_description = file: README.md
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages =
    cosmology
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy

[options.extras_require]
test =
    pytest
docs =
    sphinx
    furo
    numpydoc
    matplotlib
