[metadata]
name = cosmology
version = attr: cosmology.__version__
author = Nicolas Tessore
author_email = n.tessore@ucl.ac.uk
license = MIT
license_files =
    LICENSE.txt
description = Python package for cosmology
url = https://github.com/python-cosmology/cosmology
project_urls =
    Documentation = https://cosmology.readthedocs.io/
    Issues = https://github.com/python-cosmology/cosmology/issues
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages =
    cosmology
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy

[options.extras_require]
test =
    pytest
docs =
    sphinx
    furo
    numpydoc
    matplotlib
